--- a/kafka-node/server.1.properties
+++ b/kafka-node/server.1.properties
@@ -18,7 +18,7 @@
 ############################# Server Basics #############################
 
 # The id of the broker. This must be set to a unique integer for each broker.
-broker.id=0
+broker.id=1
 
 # Switch to enable topic deletion or not, default value is false
 #delete.topic.enable=true
@@ -37,7 +37,7 @@ listeners=PLAINTEXT://0.0.0.0:9092
 # Hostname and port the broker will advertise to producers and consumers. If not set, 
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
 # returned from java.net.InetAddress.getCanonicalHostName().
-advertised.listeners=PLAINTEXT://172.39.39.11:9092
+#advertised.listeners=PLAINTEXT://172.39.39.11:9092
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
 #listener.security.protocol.map=PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
