--- a/kafka-node/Dockerfile
+++ b/kafka-node/Dockerfile
@@ -1,8 +1,10 @@
 FROM fedora:latest
 
-RUN dnf install -y java nc procps
+RUN dnf install -y java nc procps socat
 
 RUN cd /tmp && curl -O http://apache.cs.utah.edu/kafka/0.11.0.1/kafka_2.11-0.11.0.1.tgz && cd /
 RUN tar -xvf /tmp/kafka_2.11-0.11.0.1.tgz -C /usr/share/
 
-ENTRYPOINT /home/start.sh
+# ENTRYPOINT ["/usr/share/kafka_2.11-0.11.0.1/bin/kafka-server-start.sh","/usr/share/kafka_2.11-0.11.0.1/config/server.properties"] 
+# ENTRYPOINT ["/start.sh"]
+ENTRYPOINT /start.sh
